k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-frontend-service
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: dev-frontend
  ports:
    - port: 80
      targetPort: 80
